[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { version = "0.9" }
bevy = { version = "0.9", features = [ "dynamic" ] }
bevy_rapier2d = { version = "0.20", features = [ "simd-stable" ] }
bevy_prototype_lyon = "0.7.2"
rand = "0.8.5"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3